# nano-vf-rl-gym

./: .gitignore  agents.ipynb  main.py  pyproject.toml
lecture-1/: agent_patterns.ipynb
lecture-2/: human_training.ipynb  prod_agents.ipynb  will-prod_agents.ipynb
rl-with-vf/: data_generation.ipynb  synthetic_data_generation.py  train.py
rl-with-vf/lexo-sort/: data_generation.ipynb  eval.py  grpo_train.py  notes.md  sft_train.py
search-agent/: full_url_item.md  proto.ipynb  what_to_cook.md
