[project]
name = "rl-agents-intro-will"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "instructor>=1.9.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "markdownify>=1.1.0",
    "nest-asyncio>=1.6.0",
    "openai>=1.88.0",
    "openai-agents>=0.0.19",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "tavily-python>=0.7.8",
    "weave>=0.51.54",
]
