[project]
name = "rl-agents-intro-will"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "huggingface-hub[cli]>=0.33.0",
    "ipykernel>=6.29.5",
    "openai>=1.91.0",
    "verifiers>=0.0.0",
]
